css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Open Sans',sans-serif;
    color: black;
}

.clearfix::after{
    content: "";
    display: table;
    clear: both;
}

/********************************************************
* DEBUG *
*********************************************************/
/* .debug .navmenu{
    height: 100px;
    background: aqua;
}
.debug .jumbotron{
    height: 100%;
    background: cadetblue;
}
.debug h1{
    height: 100px;
    background: rgba(0, 0, 0, 0.5);
}
.debug h2{
    height: 70px;
    background: rgba(30, 34, 54, 0.5);
}
.debug h3{
    height: 50px;
    background: rgba(63, 32, 66, 0.5);
}
.debug .freetry_content{
    height:300px;
    background: chocolate;
}
.debug .hero_img{
    height: 530px;
    background: darkcyan;
}
.debug .billing{
    height:50px;
    background:darkgray;
}
.debug .col_30,
.debug .col_45,
.debug .col_50{
    height: 500px;
    background:coral;
}
.debug .card_pro{
    height:300px;
    background:rgb(245, 232, 48);
}
.debug .partner img{
    height: 500px;
    background:darkturquoise;
}
.debug .partner>div{
    height: 500px;
    background: chocolate;
}
.debug .more{
    height: 1rem;
    background:darkblue;
    display: block;
}
.debug .teams>.clearfix>div{
    height: 700px;
    background:darkgoldenrod;
    border: 1px solid red;
}
.debug .square{
    background:darkorchid;
    border: 1px solid burlywood;
}
.debug .cta{
    height: 400px;
}
.debug .cta>div{
    height:200px;
    background: chartreuse;
}
.debug .question{
    height: 100px;
    background: brown;
}

.debug .f_col{
    height: 400px;
    background: rosybrown;
}
.debug .lang{
    height: 200px;
    background: blueviolet;
} */


/********************************************************
* UTILITY *
*********************************************************/
.container_80{
    width: 80%;
    margin: auto;
}
.container_70{
    width: 70%;
    margin: auto;
}
.m_10_0{
    margin: 10% 0;
}
.m_3rem_0{
    margin: 3rem 0;
}
.m_bot_2rem{
    margin-bottom: 2rem;
}
.pad_topbot{
    padding: 10% 0;
}
.pad_2rem{
    padding: 2rem;
}
.pad_1rem_0{
    padding: 1rem 0;
}
.w_50{
    width:50%;
}
div[class^="col_"]{
    float:left;
}
div[class^="col_"] > img{
    width:100%;
}
.col_70{
    width:70%;
}
.col_50{
    width:50%;
}
.col_45{
    width:45%;
}
.col_30{
    width: 30%;
}
.gray_txt{
    color:gray;
}
div.border_bot:empty{
    width:20%;
}
/* #region buttons */
.btn{
    padding: .6rem 2rem;
    text-align: center;
}
.btn_blue{
    background-color: blue;
    color: white;
}
.btn_outline{
    border: 1px solid black;
}
/* #endregion buttons */

.circle{
    width: 25px;
    height: 25px;
    border-radius: 50%;
    border: 1px solid gray;
    display: inline-block;
    margin-right: .5rem;
    vertical-align: middle;
}
.circle_select{
    border: 6px solid blue;
}
.caption{
    font-size: .9rem;
    margin: .5rem 0 1rem;
}
.hyperlink{
    text-decoration: underline;
    color: blue;
}
.border_bot{
    border-bottom: 1px solid gray;
}

/* #region icons */
::marker,::before{
    font-family: "Font Awesome 5 Free";
    font-size:1em;
}
    /* befores */
.user::before{
    content: "\f007";
}
.team::before{
    content: "\f1ad";
}
    /* markers */
.user::marker{
    content: "\f007";
}
.user_plus::marker{
    content:"\f234";
    font-weight: 900;
}
.folder::marker{
    content: "\f07b";
}
.pen::marker{
    content: "\f304";
    font-weight: 900;
}
.smile::marker{
    content: "\f118";
}
.check>li::marker{
    content:"\f00c";
    font-weight: 900;
    color: blue;
}
/* #endregion icons */

/********************************************************
* COMMON *
*********************************************************/
body{
    min-width: 1440px;
}
h1{
    font-size: 4.5rem;
    padding: 5% 0;
}
h2{
    font-size: 3rem;
}
h3{
    font-size: 2rem;
    padding: 0 0 1rem;
}
h4{
    padding: 0 0 .5rem;
}
a{
    display: inline-block;
    text-decoration: none;
}
p,a{
    font-size: 21px;
}
i{
    margin-right: .5rem;
}


/********************************************************
* HEADER *
*********************************************************/
/* navbar */
.navmenu{
    padding: 0 2%;
    height: 100px;
    line-height: 100px;
    background: white;
}
.side_left,
.side_right{
    float:left;
    width:50%;
}
.nav_list{
    list-style: none;
    margin: auto -2%;
}
.nav_list > li{
    margin: auto 2%;
    display: inline-block;
}
.side_right .nav_list{
    text-align: right;
}
.nav_list .logo{
    width:15%;
}
.logo>img{
    vertical-align: text-bottom;
    width:100%;
}
.nav_list > li .btn{
    display: inline;
}

/* jumbo */
.jumbotron{
    background: linear-gradient(180deg,#B4D0E7 90%, rgba(255,255,255,0) 10%);
}
.jumbotron .col_70{
    padding-left: 2%;
}
.jumbotron img{
    filter: drop-shadow(10px 10px 15px rgba(100,100,100,0.2));
}
.jumbotron a[href="#plans"]{
    margin: 10% 0;
}
.fa-arrow-down{
    font-size: 3rem;
}



/********************************************************
* MAIN *
*********************************************************/
.card.col_30:nth-child(2),
.features .col_30:nth-child(2) {
    margin: auto 5%;
}


/* billing plans section (1) */
.plans{
    margin: 10% 0;
}

.plans ul{
    padding-left:1em;
}
.plans li{
    padding: 1rem 1rem 1rem 10px;
}
.plans li,
.plans p,
.plans a{
    font-size: 18px;
}
.billing > span{
    margin-right: 2%;
}
.card{
    border: 1px solid gray;
}
.card_long{
    min-height: 1200px;
}
.plan_title{
    padding: 1rem 0;
}
.card_header{
    text-align: center;
    padding: 1rem;
}
.plan_info ,
.trybuy_now > *{
    margin: 2rem 0;
}
.plans .btn{
    display: block;
}
.features{
    padding: 10% 0;
}
.card_pro p{
    padding-top: 2rem;
}
/* partner section (2) */
.partner_cont{
    padding: 2rem 4.5rem;
}
.partner_cont p{
    padding: 2rem 0;
    line-height: 180%;
}


/* features section (3) */
    /* EMPTY */

/* teams section (4) */
section.teams{
    margin: 0;
}
.brands_stripe{
    height: 609.297px;
}
.brands_container{
    float: left;
    width: 30%;
    height: 100%;
}
.focus_brand{
    float: left;
    width: 40%;
    height: 100%;
    padding: 3rem;
    background: #F5F5F5;
}
.focus_brand > img{
    width: 200px;
}
.square{
    float:left;
    height: 50%;
    width: 50%;
    position: relative;
}
.square>img{
    width:60%;
    filter:invert();
    position:absolute;
    top:50%;
    left: 50%;
    transform: translate(-50%,-50%);
}
.designit{
    background: #A2D39B;
}
.arizona_uni{
    background: #61082B; 
}
.uf_florida{
    background: #0592CE;
}
.topps{
    background: #FF1C24;
}
.wbr_bycicle{
    background: #D5001F;
}
.hearst_corp{
    background: #B4D0E7;
}
.lonely_planet{
    background: #0F2481;
}
.clear_channel{
    background: #FED830;
}

/* cta section (4) */
.cta{
    background-color: cadetblue;
    position:relative;
}
.cta>div{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
}
.cta .red_txt{
    position:absolute;
    top:0;
    left:0;
    width: 40%;
}
.cta .btn{
    position:absolute;
    top:0;
    right:0;
}

/* frequently asked section (4) */
.frequently_asked > h2{
    margin-bottom: 4rem;
}
.frequently_asked > .question{
    border-top: 2px solid black;
    padding: 1rem 0;
    position:relative;
}
.frequently_asked > .question:last-child{
    border-bottom: 2px solid black;
}
.question > h3{
    display: inline-block;
    max-width:90%;
}
.question > i {
    display:inline-block;
}

/********************************************************
* FOOTER *
*********************************************************/
#site_footer{
    background: black;
}
.f_col{
    float:left;
    width: 15%;
    margin-right: 5%;
}
.lang{
    display: inline-block;
}
.lang > span{
    line-height: 100%;
}

